k8s/ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - notification.piggyback.ga
    - portal.piggyback.ga
    secretName: nginx-tls
  rules:
  - host: notification.piggyback.ga
    http:
      paths:
      - backend:
          serviceName: piggyback-notification-service	
          servicePort: 8080
  - host: portal.piggyback.ga
    http:
      paths:
      - backend:
          serviceName: piggyback-portal-service
          servicePort: 80
